# super-enigma

./: .gitignore  README.md
crewAI/: README.md  pyproject.toml
crewAI/src/crew_report_generation_automation/: crew.py  main.py
crewAI/src/crew_report_generation_automation/config/: agents.yaml  tasks.yaml
crewAI/src/prep_for_meeting/: main.py
